# chip8

./: Cargo.toml
proptest-regressions/: chip8.txt
src/: bits.rs  chip8.rs  decode.rs  main.rs  types.rs
