[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
pixels = "0.8.0"
winit = "0.25"
winit_input_helper = "0.10"
rand = "0.8.4"

[dev-dependencies]
proptest = "1.0.0"